Fix the Register button on the register.php file
Conserta o botão Cadastrar no aquivo cadastrar.php .

The button was misaligned with the registration form.
O botão se encontrava desalinhado em relação ao formulário de cadastro .

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -23,7 +23,7 @@ input{
 }
 input[type=submit]{
 	height: 50px;
-	width: 440px;
+	width: 400px;
 	background-color: #ff0066;
 	cursor: pointer;
 }
